--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "from-article-to-frontend",
+  "name": "fata-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -23,5 +23,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
     "@eslint/eslintrc": "^3"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
